backend/app_b/charts/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: &deploy_name app-b
  labels:
    app: *deploy_name
spec:
  type: NodePort
  selector:
    app: *deploy_name
  ports:
    - name: api
      port: 8080
      protocol: TCP
      targetPort: api
